[gd_scene load_steps=9 format=3 uid="uid://dgq252mntnlul"]

[ext_resource type="Script" path="res://actors/enemy.gd" id="1_q7y46"]
[ext_resource type="Texture2D" uid="uid://evjspf1och42" path="res://addons/sprites/Player Skin.png" id="2_pgaoc"]
[ext_resource type="PackedScene" uid="uid://dy47036mldj1w" path="res://actors/health.tscn" id="3_tauiw"]
[ext_resource type="PackedScene" uid="uid://ddgvw7imb6yqu" path="res://weapons/weapon.tscn" id="4_a4fxe"]
[ext_resource type="Script" path="res://actors/AI.gd" id="5_aqcvq"]
[ext_resource type="PackedScene" uid="uid://d3add2ict0tk3" path="res://team.tscn" id="6_mo0fn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_13by8"]
radius = 110.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rya6p"]
radius = 1500.0

[node name="Ally" type="CharacterBody2D"]
position = Vector2(0, 2)
script = ExtResource("1_q7y46")

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(-12.7261, -7.64246)
shape = SubResource("CircleShape2D_13by8")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(97.274, 4.358)
rotation = -1.5708
texture = ExtResource("2_pgaoc")

[node name="Health" parent="." instance=ExtResource("3_tauiw")]
health = 80

[node name="Weapon" parent="." instance=ExtResource("4_a4fxe")]
position = Vector2(191.274, 30.358)
scale = Vector2(1, 1.2)

[node name="AI" type="Node2D" parent="."]
script = ExtResource("5_aqcvq")

[node name="DetectionZone" type="Area2D" parent="AI" groups=["enemy"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/DetectionZone"]
shape = SubResource("CircleShape2D_rya6p")

[node name="PatrolTimer" type="Timer" parent="AI"]
wait_time = 3.0
one_shot = true

[node name="Team" parent="." instance=ExtResource("6_mo0fn")]

[connection signal="body_entered" from="AI/DetectionZone" to="AI" method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="AI/DetectionZone" to="AI" method="_on_DetectionZone_body_exited"]
[connection signal="timeout" from="AI/PatrolTimer" to="AI" method="_on_patrol_timer_timeout"]
